--- a/web/resources/css/carousel.css
+++ b/web/resources/css/carousel.css
@@ -5,6 +5,7 @@
 body {
   padding-bottom: 40px;
   color: #5a5a5a;
+    background-color: whitesmoke;
 }
 
 
@@ -39,17 +40,20 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 500px;
+  height: 800px;
   margin-bottom: 60px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+    top: 330px;
+    bottom: auto;
 }
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
+  height: 800px;
+
   background-color: #777;
 }
 .carousel-inner > .item > img {
@@ -57,7 +61,7 @@ body {
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: 800px;
 }
 
 
